# SDL_RayTracing

./: CMakeLists.txt  Image.cpp  Image.h  LICENSE  README.md  Render.cpp  Render.h  Scene.cpp  Screen.cpp  Screen.h  main.cpp
src/: Camera.cpp  Camera.h  Hittable.cpp  Hittable.h  HittableCollection.cpp  HittableCollection.h  Image.cpp  Image.h  Material.cpp  Material.h  PPM.cpp  PPM.h  Ray.cpp  Ray.h  Scene.h  Screen.cpp  Screen.h  Sphere.cpp  Sphere.h  Vector3.h  main.cpp
